Building for production with Webpack

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,7 @@
     font-family: sans-serif;
     font-weight: 400;
     font-size: 3rem;
-    text-transform: capitalize
+    text-transform: uppercase
 }
 
 .listitems{
